samples/_failures_safe/1761212921_8cb099_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d117ecb.c: In function ‘main’:
./samples/SAFE/__tmp_1d117ecb.c:148:16: error: missing terminating " character
  148 |         printf("5
      |                ^~
./samples/SAFE/__tmp_1d117ecb.c:148:9: error: expected expression at end of input
  148 |         printf("5
      |         ^~~~~~
./samples/SAFE/__tmp_1d117ecb.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d117ecb.c:148:9: error: expected declaration or statement at end of input
